  
________________________________________________________________________________
VERSION 0.4.1

  * NEW FEATURE: Now Jimm is able to send out status messages
  * NEW FEATURE: Now Jimm is able to request the status messages from other users
  * NEW FEATURE: You can now select Jimm to only vibrate in keylock mode
  * NEW FEATURE: You can now remove yourself from another users contact list
  * NEW FEATURE: It is possible to add any message from chat to history  
  * NEW FEATURE: Added menu to clear history for all contacts
  * NEW FEATURE: Added smiles in message chat
  * NEW FEATURE: Now is possible to copy text from chat or from history
                 and use it when writing new message
  * BUGFIX: Problems with filetransfer to ips with more then 2 digits resolved
  * BUGFIX: Timestamp for offline messages is now correct
  * BUGFIX: Working with file browser cannot close app on Nokia phones anymore
  * BUGFIX: Play sound is synchronized now. Should fix sound bug on Nokia
  * Jimm wil now only weakup from minimized if your status is online of free for chat
  * Keylock message is now directly drawn to splash canvas
  * Improved navigation in chat
  * Jimm will now only weakup from minimized if your status is online of free for chat
  * Added counter to message notifyer on keylock splashscreen
  * Added choice of gender to search user function
  * Added visual notification about incoming message or about contact status 
    changing when message is writing

________________________________________________________________________________
VERSION 0.4.2
  * NEW FEATURE: it is possible to check is contact in offline or in invisible status
  * BUGFIX: Corrected wrong coding for offline messages
  * BUGFIX: Requesting status message from users in DND and OCC state was not working
  * BUGFIX: Requesting status message with MIDP2, SIEMENS2 and MOTOROLA version without 
            files module was not working
  * Now you can see full contact information          