@@ -230,4 +230,7 @@ VERSION 0.4.2
   * BUGFIX: Requesting status message from users in DND and OCC state was not working
   * BUGFIX: Requesting status message with MIDP2, SIEMENS2 and MOTOROLA version without 
             files module was not working
-  * Now you can see full contact information          
+  * You can now see on about screen if you have the latest version of Jimm
+  * Now you can see full contact information
+  * New structure for res files  
+  * build-release.xml is now building a .7z archive instead of .tar.gz
